Test notification(only for stored data)

--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,8 @@
 		"http://plurk.com/*",
 		"http://*.google.com/",
 		"alarms",
-		"storage"
+		"storage",
+		"notifications"
 	],
 	"content_security_policy": "script-src 'self' https://ajax.googleapis.com/; object-src 'self'",
 	"externally_connectable": {
